# accounting-be-rs

./: .env.example  Cargo.toml  README.md  issue.md
.github/ISSUE_TEMPLATE/: 01-decimal-uang.md  02-unique-constraint.md  03-pagination.md  04-bulk-insert.md  05-graceful-shutdown.md  06-fix-sqlx-feature.md
migrations/: 0001_init.sql  0002_posting_constraints.sql
src/: app.rs  db.rs  error.rs  main.rs
src/models/: account.rs  journal.rs
src/routes/: accounts.rs  health.rs  journals.rs  mod.rs
